objects/Approval_Matrix__c/Approval_Matrix__c.object-meta.xml
<CustomObject>
    <description>[Perficient, Scott Roose, 03/11/2019]  This object was created as part of the project to move the .NET app iApproval into Salesforce.</description>
    <label>Approval Matrix</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Approval Matrix Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>