objects/Approval_Matrix__c/fields/CapEx_Max__c.field-meta.xml
<CustomField>
    <fullName>CapEx_Max__c</fullName>
    <label>CapEx Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>