objects/Approval_Matrix__c/fields/Credit_Approval_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Approval_Limit__c</fullName>
    <label>Credit Approval Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>