objects/Approval_Matrix__c/fields/DOA_Matched_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>DOA_Matched_Job_Title__c</fullName>
    <inlineHelpText>This is the job title that matched between the User and the DOA Mapping object at the last run of the batch job</inlineHelpText>
    <label>DOA Matched Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>