objects/Approval_Matrix__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_Matrix</relationshipName>
    <type>Lookup</type>
</CustomField>