objects/Approval_Matrix__c/fields/Employee_Position__c.field-meta.xml
<CustomField>
    <fullName>Employee_Position__c</fullName>
    <formula>Employee__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the title on the linked User record.</inlineHelpText>
    <label>Employee Position</label>
    <type>Text</type>
</CustomField>