objects/Approval_Matrix__c/fields/iCert_Max__c.field-meta.xml
<CustomField>
    <fullName>iCert_Max__c</fullName>
    <label>iCert Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>